# metal-json

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: ci.yml
bench/: Cargo.toml  build.rs
bench/benches/: compare.rs  serde_compare.rs
bench/cpp/: shim.cpp
bench/src/: lib.rs
bench/tests/: shim_smoke.rs
corpus/: all_scalars.json  array_of_objects.json  deep_nesting.json  duplicate_keys.json  empty_containers.json  escapes.json  long_string.json  mixed.json  nested_objects.json  numbers.json  root_number.json  root_string.json  twitter_like_100kb.json  unicode_keys.json  whitespace.json
docs/: bench-report-sample-cpu-reference.md  bench-report.md  parsing-json-on-an-apple-gpu-twitter.md  parsing-json-on-an-apple-gpu.md  spikes.md  tape-format.md
examples/: parse_breakdown.rs  pso_probe.rs  spike_mulhi.rs  spike_overhead.rs  spike_wordsize.rs
scripts/: fetch_bench_data.sh  fetch_jsontestsuite.sh  gen_corpus.py  update_simdjson_amalgamation.sh
shaders/: 00_smoke.metal  01_u2_selftest.metal  02_classify.metal  03_spine.metal  04_token_mask.metal  05_token_scatter.metal  06_validate.metal  07_spine3.metal  08_depth.metal  09_sort.metal  10_pair_ctx.metal  11_emit.metal  12_numbers.metal  13_strings.metal  bitmap_u2.h  common.h  pow5_table.h  tape_types.h  tg_scan.h
src/: document.rs  error.rs  input.rs  lib.rs  parser.rs  pool.rs  serde.rs  stage.rs  tape.rs  unescape.rs  value.rs
src/gpu/: mod.rs  numbers.rs  pipeline.rs  stage1.rs  stage2.rs  stage3.rs  strings.rs  timing.rs
src/metal/: batch.rs  buffer.rs  context.rs  mod.rs  pipeline.rs
src/reference/: classify.rs  emit.rs  mod.rs  scalars.rs  (+4 more)
tests/: differential.rs  gpu_e2e.proptest-regressions  gpu_e2e.rs  jsontestsuite.rs  kernels.proptest-regressions  kernels.rs  numbers.rs  serde.rs  smoke.rs  structure.proptest-regressions  structure.rs
xtask/: Cargo.toml
(+4 files in other folders)
