[package]
name = "metal-json-bench"
version = "0.0.0"
edition = "2024"
publish = false

# Benchmark harness: vendored C++ simdjson (FFI shim, see cpp/), Rust
# simd-json, serde_json, and metal-json behind one criterion suite.
# Datasets are discovered under <workspace>/data/bench (gitignored);
# populate with `cargo run -p xtask -- fetch-data` / `gen-data`.

[dependencies]
metal-json = { path = "..", features = ["cpu-reference", "serde"] }

[dev-dependencies]
criterion = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
simd-json = "0.17"

[build-dependencies]
cc = { version = "1", features = ["parallel"] }

[[bench]]
name = "compare"
harness = false

[[bench]]
name = "serde_compare"
harness = false
